--- a/app/src/main/res/layout/activity_board_more.xml
+++ b/app/src/main/res/layout/activity_board_more.xml
@@ -34,15 +34,33 @@
             android:layout_marginStart="10sp"
             android:layout_marginEnd="10sp"
             android:layout_marginTop="10sp"
+            android:id="@+id/materialLayout"
+            android:hint="소재를 입력하세요">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/materialET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapSentences|textMultiLine" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/materialLayout"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:layout_marginTop="10sp"
             android:id="@+id/contentLayout"
             android:hint="내용을 입력하세요">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/contentET"
                 android:layout_width="match_parent"
-                android:layout_height="201dp"
+                android:layout_height="200dp"
                 android:inputType="textCapSentences|textMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
+
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
