--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:text="  번호                         제목                               아이디                     작성일 "
+        android:text="      번호      |      소재      |                제목                |              아이디            "
         android:textStyle="bold"
 
     />
