--- a/app/src/main/res/layout/activity_whether_rec_week_page.xml
+++ b/app/src/main/res/layout/activity_whether_rec_week_page.xml
@@ -33,8 +33,7 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/cloudy_sunny"
-                />
+                app:srcCompat="@drawable/cloudy_sunny" />
 
             <TextView
                 android:id="@+id/textView2"
