--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -45,8 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="-4dp"
-
-        app:layoutMannager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addNote"
