--- a/app/src/main/res/layout/board_list.xml
+++ b/app/src/main/res/layout/board_list.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/list_item_bnum"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:text="번호"
             android:textSize="16sp"
@@ -34,7 +34,7 @@
 
         <TextView
             android:id="@+id/list_item_material"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/notenterfield1"
             android:text="소재"
@@ -52,7 +52,7 @@
 
         <TextView
             android:id="@+id/list_item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/noteneterfield2"
             android:text="제목"
@@ -70,7 +70,7 @@
 
         <TextView
             android:id="@+id/list_item_writerid"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/noteneterfield3"
             android:text="아이디"
